--- a/static/css/resume.css
+++ b/static/css/resume.css
@@ -67,7 +67,7 @@ html p {
     width: 1000px;
     height: 300px;
     margin-top: 20px; 
-    background-image: url(../image/gou.png);
+    background-image: url(../image/gou2.png);
 }
 .peasonal-image {
     width: 100px;
